<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/principal"
    android:padding="20dp"
    tools:context=".Registrar">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondoregistrar"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Registro de Automovil"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgRegistrar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:src="@raw/imgadd" />

            <EditText
                android:id="@+id/txtmarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/marcaR"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/modeloR"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTpCombustible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/combustibleR"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/precioR"
                android:inputType="phone"
                android:maxLength="9"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/coloR"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnregistrar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#ef756a"
                android:drawableEnd="@raw/btnag"
                android:text="@string/btnRegistrar"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
            <!--android:layout_marginBottom="120dp"-->

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>