<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/principal"
    tools:context=".Actualizar">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:showDividers="middle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:showDividers="middle"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cajabuscar"
                    android:layout_width="211dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/buscarbordes"
                    android:hint="@string/buscaru"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="#524D4D"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0d6efd"
                    android:drawableEnd="@raw/buscar2"
                    android:padding="12dp"
                    android:text="@string/btnbuscar"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/cajabuscar"
                    app:layout_constraintStart_toStartOf="@+id/cajabuscar"
                    app:layout_constraintTop_toBottomOf="@+id/cajabuscar" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/buscarbordes"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <EditText
                            android:id="@+id/marca"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/buscarM"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textColorHint="#E57373"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <EditText
                            android:id="@+id/modelo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/buscarMO"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textColorHint="#E57373"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <EditText
                            android:id="@+id/combustible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/buscarTP"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textColorHint="#E57373"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <EditText
                            android:id="@+id/precio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/buscarP"
                            android:inputType="number"
                            android:textColor="#000000"
                            android:textColorHint="#E57373"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <EditText
                            android:id="@+id/color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/buscarC"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textColorHint="#E57373"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/btnActualizar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="#0d6efd"
                            android:drawableEnd="@raw/update"
                            android:padding="12dp"
                            android:text="Actualizar Datos del Automovil"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:cornerRadius="20dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                            app:layout_constraintVertical_bias="0.0" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/btnReiniciar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:backgroundTint="@color/database"
                            android:drawableEnd="@raw/reiniciar"
                            android:padding="12dp"
                            android:text="Actualizar otro Automovil"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:cornerRadius="20dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                            app:layout_constraintVertical_bias="0.0" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>